Two `main` elements isn't quite right, so changed to a `div`. Corrected indentation as some missing closing `</div>`

--- a/index.html
+++ b/index.html
@@ -25,28 +25,25 @@ title: Home
 		</div>
 	</header>
 
-	<main class="home-main-content">
+	<div class="home-main-content">
 
 		<!-- section 1: -->
 
 		<!-- faq: -->
-<section class="home__faq">
-<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
-<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
-
-<ul class="home-faq__questions">
-<li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
-<li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>
-<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work-what-do-you-do">What does Scholars' Lab do? How can you fit into my work?</a></li>
-<li><a href="about/#can-you-build-me-a-thing">Can you build me a thing?</a></li>
-<li><a href="about/#can-we-collaborate">Can we collaborate on something?</a></li>
-
-<li><a href="/about/#where-are-you">Where are you?</a></li>
-<li><a href="about/#how-do-i-contact-you">How do I contact you?</a></li>
-</ul>
-
-<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
-</section>
+		<section class="home__faq">
+			<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
+			<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
+			<ul class="home-faq__questions">
+				<li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
+				<li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>
+				<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work-what-do-you-do">What does Scholars' Lab do? How can you fit into my work?</a></li>
+				<li><a href="about/#can-you-build-me-a-thing">Can you build me a thing?</a></li>
+				<li><a href="about/#can-we-collaborate">Can we collaborate on something?</a></li>
+				<li><a href="/about/#where-are-you">Where are you?</a></li>
+				<li><a href="about/#how-do-i-contact-you">How do I contact you?</a></li>
+			</ul>
+			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
+		</section>
 
 		<!-- library: -->
 		<section class="home__library">
@@ -62,39 +59,37 @@ title: Home
 		<!-- contact us: -->
 		<section class="home__contact">
 			<div class="home-contact__title">Contact Us</div>
-
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
 					<p>Curious? Please get in touch with us&mdash;absolutely no prior experience or fully formed ideas needed!</p>
 					<p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions, or if you already know you want to meet with us. Sign up for our newsletter to hear about events and opportunities!</p>
 				</div>
-
 				<div class="home-contact__newsletter">
 					<div>
-					<!-- Begin MailChimp Signup Form -->
-					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-					<style type="text/css">
-						#mc_embed_signup{background:#fff; clear:left; width:300px;}
-					</style>
-					<div id="mc_embed_signup">
-					<form action="https://virginia.us1.list-manage.com/subscribe/post?u=3ac105f4d87dddbd34542ab41&amp;id=25120106cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					    <div id="mc_embed_signup_scroll">
-						<h2>Scholars' Lab Newsletter</h2>
-					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address </label>
-						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
-					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    </div>
-					</form>
-					</div>
-					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-					<!--End mc_embed_signup-->
+						<!-- Begin MailChimp Signup Form -->
+						<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+						<style type="text/css">
+							#mc_embed_signup{background:#fff; clear:left; width:300px;}
+						</style>
+						<div id="mc_embed_signup">
+							<form action="https://virginia.us1.list-manage.com/subscribe/post?u=3ac105f4d87dddbd34542ab41&amp;id=25120106cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    		<div id="mc_embed_signup_scroll">
+									<h2>Scholars' Lab Newsletter</h2>
+									<div class="mc-field-group">
+										<label for="mce-EMAIL">Email Address </label>
+										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+									</div>
+									<div id="mce-responses" class="clear">
+										<div class="response" id="mce-error-response" style="display:none"></div>
+										<div class="response" id="mce-success-response" style="display:none"></div>
+									</div>
+									<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+									<div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
+									<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+								</div>
+							</form>
+						</div>
+						<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 					</div> <!-- end signup wrapper -->
 				</div> <!-- end newsletter -->
 			</div> <!-- end contact content -->
@@ -150,9 +145,10 @@ title: Home
 					</div>
 				</div>
 				{% endfor %}
-<!-- open office hours: -->
-{% include open-office-hours.html %}
-			<div class="home-events__cta"><a href="/events">All events</a></div>
+				<!-- open office hours: -->
+				{% include open-office-hours.html %}
+				<div class="home-events__cta"><a href="/events">All events</a></div>
+			</div>
 		</section>
 
 		<!-- section 3: -->
@@ -178,7 +174,7 @@ title: Home
 			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
 			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See <a href="https://scholarslab.lib.virginia.edu/makerspace/#calendar-link">our full hours calendar</a> for actual hours on any given day.</p>
 			<div class="home-maker__hours">
-			{% include makerspace-hours.html %}
+				{% include makerspace-hours.html %}
 			</div>
 			<div class="home-maker__text">
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
@@ -196,5 +192,6 @@ title: Home
 			</div>
 			<div class="home-spatial__cta"><a href="/spatial-technologies/">Spatial Tech Home</a></div>
 		</section> <!-- end sections -->
-	</main> <!-- end main content -->
+
+	</div> <!-- end main content -->
 </article> <!-- end wrapper -->
