The page needs a landmark, like a H1, so added this to the patterned title and updated some CSS. Need min-height else on landscape the layout breaks. The `<object>` which contained the SVG can just be an image.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@ title: Home
 	<header class="home-landing-wrapper">
 <!-- {% include snowday.html %} -->
 		<div class="home-landing__big-title">
-			<div class="home-title__text">
+			<h1 class="home-title__text">
 				<span class="show-if-big--css">We are<br/>a community<br/>for experimental<br/>scholarship.</span>
 				<span class="show-if-small--css">We<br/>are a<br/>community<br/>for<br/>experimental<br/>scholarship.</span>
-				<object type="image/svg+xml" data="{{ '/assets/img/svg/thin-down-arrow-white.svg' | relative_url }}" alt="Down arrow" id="hero-arrow">
-				Your browser does not support SVG
-			</object>
-			</div>
+				<img src="{{ '/assets/img/svg/thin-down-arrow-white.svg' | relative_url }}" alt="Down arrow" id="hero-arrow" />
+			</h1>
 		</div>
 		<div class="home-landing__hero-text">
 			<div class="home-hero__description">
