Added missing `role="banner"`

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <article class="home-wrapper">
-	<header class="home-landing-wrapper">
+	<header role="banner" class="home-landing-wrapper">
 <!-- {% include snowday.html %} -->
 		<div class="home-landing__big-title">
 			<h1 class="home-title__text">
