--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,7 +9,7 @@ order: 2
 ---
 
 <div class="blog-wrapper">
-	<header class="blog-page-header">
+	<header role="banner" class="blog-page-header">
 		<div class="blog-header__big-title">Blog</div>
 		<div class="blog-header__subtitle">Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship.</div>
 	</header>
