--- a/pages/events.html
+++ b/pages/events.html
@@ -10,7 +10,7 @@ notes:
 ---
 <div class="events-wrapper">
 
-	<header class="events-page-header">
+	<header role="banner" class="events-page-header">
 		<div class="events-header__big-title">Events</div>
 		<div class="events-header__subtitle">Current and past events hosted, sponsored, or partnered on by the Scholars' Lab.</div>
 	</header>
