--- a/pages/people.html
+++ b/pages/people.html
@@ -12,7 +12,7 @@ nav: true
 {% assign alumni = site.people | where: 'status', 'not_current' | sort: 'last_name' %}
 
 <div class="people-wrapper">
-  <header class="people-page-header">
+  <header role="banner" class="people-page-header">
     <div class="people-header__big-title">People</div>
     <!--div class="people-header__subtitle"><!-- unsure if needed, but leaving structure in case -></div-->
   </header>
