added info from job talk post

--- a/pages/blogging.html
+++ b/pages/blogging.html
@@ -6,19 +6,19 @@ nav: true
 ---
 This page celebrates our successful 2019 challenge, a "Year of Blogging". The challenge started off with Brandon Walsh and Amanda Visconti committing to write one post per month in 2019. Ammon Shepherd stepped things up early on with a series of four posts on DH archiving that were co-written with other SLab and UVA Library staff. We share some stats and highlights, followed by the year's posts organized by topic.
 
-We were able to reach our stretch goal of encouraging a broader revival of our blog, tied into a renewal of our website (migration from WordPress to Jekyll-generated static site, new content and info structure). Between January 1, 2019 and December 3, 2019, we wrote **62** posts—that is, we dind't count any straight announcements of fellowships or workshops, just essays. The "website launch announcement" post was counted because it explains the process and reasoning behind the website renewal work; announcing the call for our fellowship applications was not counted. Below, the board where we tracked posts via author and a 3-word summary of each post:
+We were able to reach our stretch goal of encouraging a broader revival of our blog, tied into a renewal of our website (migration from WordPress to Jekyll-generated static site, new content and info structure). Between January 1, 2019 and December 3, 2019, we wrote **63** posts—that is, we dind't count any straight announcements of fellowships or workshops, just essays. The "website launch announcement" post was counted because it explains the process and reasoning behind the website renewal work; announcing the call for our fellowship applications was not counted. Below, the board where we tracked posts via author and a 3-word summary of each post:
 
 ![Large cardboard poster listing the authors of posts and a 3-word summary of the post content, for all essay blog posts published in 2019 on the Scholars' Lab blog](https://raw.githubusercontent.com/scholarslab/scholarslab.org/master/assets/post-media/2019-12-04-yearofblogging1board.jpg)
 
 ## Stats!
-Amanda wrote 13 posts and Brandon wrote 12, followed by Ammon with 9 posts, Kelli Shermeyer (5), Abhishek Gupta (4), and Ankita Chakrabarti (3). The following folks each wrote 2 posts: Connor Kenaston, Brandon Butler, Janet Dunkelbarger, Jordan Buysse, Lauren Van Nest, Lauren Work, and Zijia Zeng. The following folks each contributed one post: Chloe Downe Wells, Alison Booth, Arin Bennett, Drew MacQueen, Julia Haines, Mackenzie Brooks, Mathilda Shepard, Natasha Roth-Rowland, Neal Curtis, Sam Lemley, Leigh Miller, Jasper Braun, and Will Rourk.
+Amanda wrote 14 posts and Brandon wrote 13, followed by Ammon with 9 posts, Kelli Shermeyer (5), Abhishek Gupta (4), and Ankita Chakrabarti (3). The following folks each wrote 2 posts: Connor Kenaston, Brandon Butler, Janet Dunkelbarger, Jordan Buysse, Lauren Van Nest, Lauren Work, and Zijia Zeng. The following folks each contributed one post: Chloe Downe Wells, Alison Booth, Arin Bennett, Drew MacQueen, Julia Haines, Mackenzie Brooks, Mathilda Shepard, Natasha Roth-Rowland, Neal Curtis, Sam Lemley, Leigh Miller, Jasper Braun, and Will Rourk.
 
 More stats:
 * 26 people participated in authoring on our blog this year
 * 15 students authored a total of 29 posts
 * 7 Scholars' Lab staff authored posts
 * 6 colleagues outside Scholars' Lab (including 1 colleague outside UVA!) authored posts on our blog: Neal Curtis, Sam Lemley, Mackenzie Brooks, Lauren Work, Brandon Butler, Julia Haines
-* 6 posts were collaborations among multiple authors
+* 7 posts were collaborations among multiple authors
 
 ## External recognition
 Five posts were highlighted by *Digital Humanities Now*! Two as "Editor's Choice" posts...
@@ -90,7 +90,7 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 <li><a href="/blog/connecting-linux-to-cavalier/">"Connecting Linux To Cavalier"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a> </li>
 </ul>
 
-###Spatial Technologies
+### Spatial Technologies
 <ul>
 <li><a href="/blog/online-3d-content/">"Online Resources for 3D Content in VR/AR"</a> by <a href="/people/abhishek-gupta/">Abhishek Gupta</a> </li>
 <li><a href="/blog/documentation-photogrammetry/">"Photogrammetry Workflow using a DSLR Camera"</a> by <a href="/people/julia-haines/">Julia Haines</a> </li>
@@ -108,6 +108,7 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 
 ### Meta-DH (lab & personal research practice as DH scholarship)
 <ul>
+<li><a href="/blog/digital-humanities-job-talks/">"Digital humanities job talks: some case studies"</a> by <a href="/people/brandon-walsh/">Brandon Walsh</a> and <a href="/people/amanda-visconti/">Amanda Visconti</a> </li>
 <li><a href="/blog/dh-cover-letters/">"How We Talk and Write about DH Jobs"</a> by <a href="/people/brandon-walsh/">Brandon Walsh</a> and <a href="/people/amanda-visconti/">Amanda Visconti</a> </li>
 <li><a href="/blog/the-life-of-a-scholars-lab-on-community/">"The Life Of A (Scholars') Lab: On Community"</a> by <a href="/people/brandon-walsh/">Brandon Walsh</a> </li>
 <li><a href="/blog/management-charter-part1/">"A management charter (part 1)"</a> by <a href="/people/amanda-visconti/">Amanda Visconti</a> </li>
