--- a/pages/blogging.html
+++ b/pages/blogging.html
@@ -6,12 +6,12 @@ nav: true
 ---
 This page celebrates our successful 2019 challenge, a "Year of Blogging". The challenge started off with Brandon Walsh and Amanda Visconti committing to write one post per month in 2019. Ammon Shepherd stepped things up early on with a series of four posts on DH archiving that were co-written with other SLab and UVA Library staff. We share some stats and highlights, followed by the year's posts organized by topic.
 
-We were able to reach our stretch goal of encouraging a broader revival of our blog, tied into a renewal of our website (migration from WordPress to Jekyll-generated static site, new content and info structure). Between January 1, 2019 and December 3, 2019, we wrote **63** posts—that is, we dind't count any straight announcements of fellowships or workshops, just essays. The "website launch announcement" post was counted because it explains the process and reasoning behind the website renewal work; announcing the call for our fellowship applications was not counted. Below, the board where we tracked posts via author and a 3-word summary of each post:
+We were able to reach our stretch goal of encouraging a broader revival of our blog, tied into a renewal of our website (migration from WordPress to Jekyll-generated static site, new content and info structure). Between January 1, 2019 and December 18, 2019, we wrote **64** posts—that is, we dind't count any straight announcements of fellowships or workshops, just essays. The "website launch announcement" post was counted because it explains the process and reasoning behind the website renewal work; announcing the call for our fellowship applications was not counted. Below, the board where we tracked posts via author and a 3-word summary of each post:
 
 ![Large cardboard poster listing the authors of posts and a 3-word summary of the post content, for all essay blog posts published in 2019 on the Scholars' Lab blog](https://raw.githubusercontent.com/scholarslab/scholarslab.org/master/assets/post-media/2019-12-04-yearofblogging1board.jpg)
 
 ## Stats!
-Amanda wrote 14 posts and Brandon wrote 13, followed by Ammon with 9 posts, Kelli Shermeyer (5), Abhishek Gupta (4), and Ankita Chakrabarti (3). The following folks each wrote 2 posts: Connor Kenaston, Brandon Butler, Janet Dunkelbarger, Jordan Buysse, Lauren Van Nest, Lauren Work, and Zijia Zeng. The following folks each contributed one post: Chloe Downe Wells, Alison Booth, Arin Bennett, Drew MacQueen, Julia Haines, Mackenzie Brooks, Mathilda Shepard, Natasha Roth-Rowland, Neal Curtis, Sam Lemley, Leigh Miller, Jasper Braun, and Will Rourk.
+Amanda wrote 14 posts and Brandon wrote 13, followed by Ammon with 10 posts, Kelli Shermeyer (5), Abhishek Gupta (4), and Ankita Chakrabarti (3). The following folks each wrote 2 posts: Connor Kenaston, Brandon Butler, Janet Dunkelbarger, Jordan Buysse, Lauren Van Nest, Lauren Work, and Zijia Zeng. The following folks each contributed one post: Chloe Downe Wells, Alison Booth, Arin Bennett, Drew MacQueen, Julia Haines, Mackenzie Brooks, Mathilda Shepard, Natasha Roth-Rowland, Neal Curtis, Sam Lemley, Leigh Miller, Jasper Braun, and Will Rourk.
 
 More stats:
 * 26 people participated in authoring on our blog this year
@@ -72,7 +72,7 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 <li><a href="/blog/workshop-on-reading-with-command-line/">"Workshop On Reading With Command Line"</a> by <a href="/people/brandon-walsh/">Brandon Walsh</a> </li>
 </ul>
 
-### Tutorials: Coding
+### Coding tutorials
 <ul>
 <li><a href="/blog/js-pagination/">"JS Pagination"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a> </li>
 <li><a href="/blog/github-jekyll-glossary/">"Running a collaborative blog: A glossary for GitHub & Jekyll"</a> by <a href="/people/amanda-visconti/">Amanda Visconti</a> </li>
@@ -80,7 +80,7 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 <li><a href="/blog/automating-webpage-tweet-screencaptures/">"Automating Webpage & Tweet Screencaptures"</a> by <a href="/people/amanda-visconti/">Amanda Visconti</a> </li>
 </ul>
 
-### Learning to Code
+### Reflections on learning to code
 <ul>
 <li><a href="/blog/in-the-world/">"To be out in the world, to be free!"</a> by <a href="/people/janet-dunkelbarger/">Janet Dunkelbarger</a> </li>
 <li><a href="/blog/coding-and-GBBO/">"An Ode to Learning to Code, Imposter Syndrome, and the Great British Bake Off"</a> by <a href="/people/lauren-van-nest/">Lauren Van Nest</a> </li>
@@ -90,12 +90,13 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 
 ### Makerspace
 <ul>
+<li><a href="/blog/led-watch-making/">"LED Watch Making"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a> </li>
 <li><a href="/blog/make-a-3D-keychain/">"Make a 3D Printed Holder Thingy for Your Keychain"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a> </li>
 <li><a href="/blog/making-noise-in-the-makerspace/">"Making Noise In The Makerspace"</a> by <a href="/people/brandon-walsh/">Brandon Walsh</a> </li>
 <li><a href="/blog/connecting-linux-to-cavalier/">"Connecting Linux To Cavalier"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a> </li>
 </ul>
 
-### Spatial Technologies
+### Spatial technologies
 <ul>
 <li><a href="/blog/online-3d-content/">"Online Resources for 3D Content in VR/AR"</a> by <a href="/people/abhishek-gupta/">Abhishek Gupta</a> </li>
 <li><a href="/blog/documentation-photogrammetry/">"Photogrammetry Workflow using a DSLR Camera"</a> by <a href="/people/julia-haines/">Julia Haines</a> </li>
@@ -127,7 +128,7 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 <li><a href="/blog/getting-from-here-to-there/">"Getting from Here To There"</a> by <a href="/people/brandon-walsh/">Brandon Walsh</a> </li>
 </ul>
 
-### Meta-DH: archiving
+### Archiving DH
 <ul>
 <li><a href="/blog/archiving-dh-part-one/">"Archiving DH Part 1 - The Problem"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a> </li>
 <li><a href="/blog/archiving-dh-part-2-the-problem-in-detail/">"Archiving DH Part 2: The Problem in Detail"</a> by Brandon Butler, <a href="/people/ammon-shepherd/">Ammon Shepherd</a>, <a href="/people/amanda-visconti/">Amanda Visconti</a>, and Lauren Work </li>
@@ -135,7 +136,7 @@ Seriously, though, we're pleased to see our priorities reflected in the most fre
 <li><a href="/blog/archiving-dh-part-4-solutions/">"Archiving DH Part 4 - Solutions"</a> by <a href="/people/ammon-shepherd/">Ammon Shepherd</a>, <a href="/people/amanda-visconti/">Amanda Visconti</a>, and Lauren Work </li>
 </ul>
 
-### Progress on larger textual research projects
+### Progress on textual research projects
 <ul>
 <li><a href="/blog/introducing-gs-grammars/">"Introducing 'Gertrude Stein's Grammars'"</a> by <a href="/people/jordan-buysse/">Jordan Buysse</a> </li>
 <li><a href="/blog/reading-grammar/">"Reading Grammar: First Attempts"</a> by <a href="/people/jordan-buysse/">Jordan Buysse</a> </li>
