--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -67,7 +67,7 @@ order: 3
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
         <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
-        <span>Grant Kim:</span>3D Printing</br/>
+        <span>Nora Dale:</span>3D Printing, Textiles</br/>
         <span>Clara Ma:</span>3D Printing<br/>
         <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
         <span>Brandon Phan:</span>3D Printing<br/>
