Remove the 3D printer calendar

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -50,7 +50,7 @@ order: 3
   <div class="makerspace__hours">
     <div id="makerspace-hours" class="maker-hours__title">Staffed Hours</div>
     <h3>Spring 2020 hours start on January 21, 2020</h3>
-    <p>You can also check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</p>
+    <p>You can also check our <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">calendar</a> for up-to-date availability.</p>
     <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See below for our open hours.</div>
     <div class="home-maker__hours"> <!-- NB: reused from homepage -->
       {% include makerspace-hours.html %}
@@ -67,10 +67,10 @@ order: 3
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
         <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
-        <span>Nora Dale:</span>3D Printing, Textiles</br/>
+        <span>Nora Dale:</span>3D Printing, Textiles, Buttons</br/>
         <span>Clara Ma:</span>3D Printing<br/>
         <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
-        <span>Brandon Phan:</span>3D Printing<br/>
+        <span>Brandon Phan:</span>3D Printing, 3D Modeling<br/>
       </div>
     </div>
     <div class="maker-people__staff">
@@ -95,41 +95,59 @@ order: 3
   schedule an appointment with a Makerspace Technologist or Scholars&#8217; Lab
   staff to discuss your planned project.</p> </div>
   </div>
+
   <div class="makerspace__calendar" id="calendar-link">
-      <div class="maker-calendar__title">3D Printer Calendar</div>
-      <div class="maker-calendar__content">
-          <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=OGlrOHBpcGQ2cjY1Z24zaHVyZWM2YWxpMWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=MDlrbTk5cDBwam9sZTg0dmZpY2s3NnFuaG0yOGRsbWVAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=bXBtZmNvY3FmY2phNjhoYzY5NzRwbGdmNW44YWc4YTlAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=amoyMHBxZGhxbHV2a29jbG5ydmdraDVnOWR0a3UyZGRAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%235C1158&amp;color=%23be6d00&amp;color=%23536ca6&amp;color=%23e0c240&amp;title=Scholars&#39;%20Lab%203D%20Printer%20Calendar&amp;showNav=1&amp;showDate=1&amp;mode=WEEK&amp;showTz=0&amp;showCalendars=0&amp;showPrint=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-          <!-- calendar colors used above have to be Google's specific color codes for calendar. -->
+    <h3>3D Printer Calendar</h3>
+    <p>Check here for printer availability.</p>
+    <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">https://cal.lib.virginia.edu/reserve/SLab3DPrinters</a>
 
-          <p style="margin-bottom:2em; font-size: 14px; font-weight: bold;">
-            <span style="color: white; background-color: #C244AB; padding: 8px 12px;">Makerspace Hours</span>
-            <span style="color: white; background-color: #536CA6; padding: 8px 12px;">Makerbot Replicator 2</span>
-            <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Lulzbot Taz 5</span>
-            <span style="color: white; background-color: #F2A640; padding: 8px 12px;">Prusa i3 MK3S</span>
-            <!-- <span style="color: white; background&#45;color: #ab2671; padding: 8px 12px;">Ultimaker</span> -->
-          </p>
-          <p>Availability of the 3D printers is reflected on this calendar, but
-          is not always accurate. To see accurate avialability, click one of
-          the printer links below.</p>
-
-          <h3>Schedule a 3D Printer</h3>
-          <p>Scheduling a 3D printer is now a two step process. This helps us
-          align with Library practices and helps us better track our printer
-          usage.</p>
-          <ol>
-              <li>Email <a
-                  href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
-              to set up a time to get trained on one or all of our 3D printers.
-              Plan on 30 minutes of training. If you like, you can request to
-              reserve a printer for use after your training. Just specify that
-              in your email.</li>
-              <li>After you have been trained, your computing ID will be put
-              on a white list for the printer(s) on which you were trained.
-              After that you can register to use a printer using this website:
-              <a
-                  href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">https://cal.lib.virginia.edu/reserve/SLab3DPrinters</a>
-              </li>
-          </ol>
+    <h3>Schedule a 3D Printer</h3>
+    <p>Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
+    to set up a time to get trained on one or all of our 3D printers.
+    Plan on 30 minutes of training.</p>
+    
+    <p>If you like, you can request to reserve a printer for use after your
+    training. Please include that in the email with the following
+    information:</p>
+      <ol>
+        <li>Name</li>
+        <li>Department/School/Organization
+          <ul>
+            <li>College and Graduate School of Arts &amp; Sciences</li>
+            <li>Curry School of Education and Human Development</li>
+            <li>Darden School of Business</li>
+            <li>Frank Batten School of Leadership and Public Policy</li>
+            <li>McIntire School of Commerce</li>
+            <li>School of Architecture</li>
+            <li>School of Continuing &amp; Professional Studies</li>
+            <li>School of Data Science</li>
+            <li>School of Engineering and Applied Science</li>
+            <li>School of Law</li>
+            <li>School of Medicine</li>
+            <li>School of Nursing</li>
+            <li>Library</li>
+            <li>Other</li>
+          </ul>
+        </li>
+        <li>Grade/Status
+          <ul>
+            <li>Undergraduate</li>
+            <li>Graduate</li>
+            <li>Staff</li>
+            <li>Faculty</li>
+            <li>Community member</li>
+          </ul>
+        <li>Project Description</li>
+        <li>Project Category
+          <ul>
+            <li>Prototype (object is a step towards a final product)</li>
+            <li>Product (object will be used as is, the final product)</li>
+            <li>Presentation (object is used to represent data or
+            information)</li>
+            <li>Preservation (object replicates a real world object)</li>
+          </ul>
+        </li>
+      </ol>
 
           <p>If you have any questions, send an email to <a
               href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a></p>
@@ -164,8 +182,8 @@ order: 3
             </ol>
 
         <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
-      </div>
-  </div>
+    </div>
+
   <div class="makerspace__inventory">
     <div class="maker-inventory__title">What&#8217;s in the Makerspace?</div>
     <!-- insert subtitle saying that this is a rundown of the inventory. Note here about where the software is located (i.e., on fancy computers located in the Makerspace - anyone is welcome to come use.) -->
