--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -49,12 +49,8 @@ order: 3
 
   <div class="makerspace__hours">
     <div id="makerspace-hours" class="maker-hours__title">Staffed Hours</div>
-    <h3>Spring 2020 hours start on January 21, 2020</h3>
     <p>You can also check our <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">calendar</a> for up-to-date availability.</p>
-    <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See below for our open hours.</div>
-    <div class="home-maker__hours"> <!-- NB: reused from homepage -->
-      {% include makerspace-hours.html %}
-    </div>
+    <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays.</div>
   </div>
 
   <div class="makerspace__people">
