--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -49,8 +49,11 @@ order: 3
 
   <div class="makerspace__hours">
     <div id="makerspace-hours" class="maker-hours__title">Staffed Hours</div>
-    <p>You can also check our <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">calendar</a> for up-to-date availability.</p>
+    <p><strong>COVID-19 Update:</strong> All UVA Libraries are closed until further notice. Scholars' Lab staff working remotely will continue to provide online consultations for online teaching, research, and coursework. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with your GIS, VR, digital project, and makerspace needs. <a href="https://www.library.virginia.edu/news/covid-19">Read more.</a></p>
+<!--
+<p>You can also check our <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">calendar</a> for up-to-date availability.</p>
     <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays.</div>
+-->
   </div>
 
   <div class="makerspace__people">
