COVID frontpage makerspace section update

--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@ title: Home
 		<!-- makerspace -->
 		<section class="home__makerspace">
 			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
+<p><strong>COVID-19 Update:</strong> All UVA Libraries are closed until further notice. Scholars' Lab staff working remotely will continue to provide online consultations for online teaching, research, and coursework. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with your makerspace needs, as well as GIS, VR, digital project, and other needs. <a href="https://www.library.virginia.edu/news/covid-19">Read more.</a></p>
+<!--
 			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See <a href="https://scholarslab.lib.virginia.edu/makerspace/#calendar-link">our full hours calendar</a> for actual hours on any given day.</p>
 			<div class="home-maker__hours">
 			{% include makerspace-hours.html %}
@@ -184,7 +186,8 @@ title: Home
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
 				<p>Find things like 3-D printing, wearable technologies, physical computing, & more at our space in the middle of the Scholars' Lab Common Area.</p>
 			</div>
-			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div> <!-- had it as "Makerspace Page >" for a bit -->
+-->
+			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div> 
 		</section>
 
 		<!-- spatial tech: -->
