#885 renaming first pass

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -278,7 +278,7 @@ order: 3
     <!--div>Diagram!!!</div-->
     <div class="maker-diagram__img"><img src="../assets/img/svg/alderman-floorplan.svg" alt="Makerspace dummy floorplan">
     {% include makerspace-floorplan.html %}</div>
-    <p id="makerspace-location-label">Makerspace and Public Space, 4th Floor Alderman</p>
+    <p id="makerspace-location-label">Makerspace and Public Space, 4th Floor main library (formerly known as Alderman)</p>
   </div>
 
   <div class="makerspace__questions">
