--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -72,7 +72,7 @@ order: 6
 			<ul class="spatial-starting__gis">
 				<h3>GIS staff availability</h3>
 				<li>Staff: Chris Gist and Drew MacQueen</li>
-				<li>Office: 417 Alderman</li>
+				<li>Office: 417 main library (formerly known as Alderman)</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics staff availability</h3>
 				<li>Staff: Will Rourk and Arin Bennett</li>
