--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -23,37 +23,40 @@ order: 3
 
 <div class="makerspace-main-content">
   <div class="makerspace__ethos">
-    <div class="maker-ethos__title">Ethos</div>
+  <div class="banner" style="border: 5px solid #00FFFF; padding: 20px;">
+    <h2>We have moved!</h2>
+    <p>The Main Library is being renovated and is currently closed. The
+    Scholars' Lab and the Makerspace have moved next door to the Clemons
+    Library 3rd Floor.</p>
+  </div>
+    <div class="maker-ethos__title">Vision</div>
     <div class="maker-ethos__text">
-      <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering,
-      and experimentation with technologies like 3D printing, sewing, physical
-      computing, and augmented reality. <strong>Open to
-          everyone</strong>&mdash;absolutely no prior experience needed and no
-      fees!&mdash;we specialize in hands-on approaches to research questions in
-      the humanities and arts.</p>
-      <p>Informed by a rich tradition of Library support for exploring
-      materiality in <a href="http://smallnotes.library.virginia.edu/">Special
-      Collections</a> and the Fine Arts Library <a
-  href="http://uvamagazine.org/articles/the_tactile_library">Materials
-  Collection</a>, and for participating in the physical-made-digital in both
-  the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a
-  href="https://www.library.virginia.edu/hours#robertson-media-center">Robertson
-  Media Center</a> in Clemons, our Makerspace Technologists can help faculty
-  and student researchers evaluate new approaches to their work, and consider
-  both the hows and the whys of making.</p> <p>Learning <i>how</i> to do
-  something with humanities technology gives us a more informed perspective on
-  <i>why</i> we do things in the humanities. <strong>Both are
-  vital.</strong></p>
+      <p>The Scholars’ Lab Makerspace is strategically situated within the UVA
+      Library to be open, provide a low barrier to entry, and be a helpful
+      resource of information, technology and support. The space invites all
+      people, and proactively encourages those in underrepresented academic
+      studies, ethnicities, genders, economic classes and skill levels to come,
+      learn, make, and be empowered to improve their education, research, and
+      community. The Makerspace is an active participant in academic research
+      through independent and collaborative work with scholars to explore,
+      understand, and report on emerging technologies, methodologies and
+      pedagogies in a variety of disciplines.  
+      </p>
+    </div>
+    <div class="maker-ethos__title">Mission</div>
+    <div class="maker-ethos__text">
+      <p>All humans are dreamers, creators, and achievers. Our mission is to
+      provide the place, the tools, and the support to empower people to dream,
+      create, and achieve.</p>
     </div>
   </div>
 
   <div class="makerspace__hours">
-    <div id="makerspace-hours" class="maker-hours__title">Staffed Hours</div>
-    <p><strong>COVID-19 Update:</strong> All UVA Libraries are closed until further notice. Scholars' Lab staff working remotely will continue to provide online consultations for online teaching, research, and coursework. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with your GIS, VR, digital project, and makerspace needs. <a href="https://www.library.virginia.edu/news/covid-19">Read more.</a></p>
-<!--
-<p>You can also check our <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">calendar</a> for up-to-date availability.</p>
-    <div class="maker-hours__explainer">We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays.</div>
--->
+    <div id="makerspace-hours" class="maker-hours__title">Fall 2020 Hours and Access</div>
+    <p>Due to concerns with COVID-19, the Makerspace is open for use by
+    appointment only. To schedule a time to use the space and resources,
+    contact <a
+      href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
   </div>
 
   <div class="makerspace__people">
@@ -63,21 +66,22 @@ order: 3
       <div class="maker-staff__list">
         <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities, Sewing<br/>
       </div>
+      <!--
       <div class="maker-students__label">Student Technologists</div>
-      <div class="maker-students__list">
-        <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
-        <span>Nora Dale:</span>3D Printing, Textiles, Buttons</br/>
-        <span>Clara Ma:</span>3D Printing<br/>
-        <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
-        <span>Brandon Phan:</span>3D Printing, 3D Modeling<br/>
+        <div class="maker-students__list">
+          <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
+          <span>Nora Dale:</span>3D Printing, Textiles, Buttons</br/>
+          <span>Brandon Phan:</span>3D Printing, 3D Modeling<br/>
+        </div>
       </div>
-    </div>
-    <div class="maker-people__staff">
-      <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
-      <div class="maker-staff__list">
-        <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br/>
-        <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
-        <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
+    -->
+      <div class="maker-people__staff">
+        <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
+        <div class="maker-staff__list">
+          <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br/>
+          <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
+          <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
+        </div>
       </div>
     </div>
   </div>
@@ -86,126 +90,50 @@ order: 3
     <div class="maker-usage__title">Using the Makerspace</div>
     <div class="maker-usage__content"> <!-- split internally per prototype drawing -->
       <p>Interested in exploring the Makerspace?  Have an idea to use
-      microcontrollers or 3D modeling and printing technology to enhance your
-  research or differently interrogate your assumptions?  Stop by to talk to one
-  of our Technologists, attend our maker <a
-  href="http://scholarslab.org/events/">workshops</a>, or contact us at <a
-  href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to
-  schedule an appointment with a Makerspace Technologist or Scholars&#8217; Lab
-  staff to discuss your planned project.</p> </div>
+      microcontrollers or 3D modeling to enhance your research or differently
+      interrogate your assumptions?  Stop by to talk to one of our
+      Technologists, attend our maker <a
+        href="http://scholarslab.org/events/">workshops</a>, or contact us at
+      <a
+        href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
+      to schedule an appointment with a Makerspace Technologist or
+      Scholars&#8217; Lab staff to discuss your planned project.</p> </div>
   </div>
 
   <div class="makerspace__calendar" id="calendar-link">
-    <h3>3D Printer Calendar</h3>
-    <p>Check here for printer availability.</p>
+    <h3>3D Printing</h3>
+    <p>We are now in Clemons Library on the 3rd floor. We do not have any 3D
+    printers available in the Makerspace. All 3D printing is now
+    available through the 3D Printing Studio in the Robertson Media Center
+    (just across the room). To schedule training and reserve a printer, please
+    see here for available printers: <a
+      href="https://cal.lib.virginia.edu/equipment?lid=241&gid=8343">https://cal.lib.virginia.edu/equipment?lid=241&gid=8343</a> And see
+    here for available training: or email <a
+      href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> <p>Check here
+    for printer availability.</p>
     <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">https://cal.lib.virginia.edu/reserve/SLab3DPrinters</a>
 
-    <h3>Schedule a 3D Printer</h3>
-    <p>Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
-    to set up a time to get trained on one or all of our 3D printers.
-    Plan on 30 minutes of training.</p>
-    
-    <p>If you like, you can request to reserve a printer for use after your
-    training. Please include that in the email with the following
-    information:</p>
-      <ol>
-        <li>Name</li>
-        <li>Department/School/Organization
-          <ul>
-            <li>College and Graduate School of Arts &amp; Sciences</li>
-            <li>Curry School of Education and Human Development</li>
-            <li>Darden School of Business</li>
-            <li>Frank Batten School of Leadership and Public Policy</li>
-            <li>McIntire School of Commerce</li>
-            <li>School of Architecture</li>
-            <li>School of Continuing &amp; Professional Studies</li>
-            <li>School of Data Science</li>
-            <li>School of Engineering and Applied Science</li>
-            <li>School of Law</li>
-            <li>School of Medicine</li>
-            <li>School of Nursing</li>
-            <li>Library</li>
-            <li>Other</li>
-          </ul>
-        </li>
-        <li>Grade/Status
-          <ul>
-            <li>Undergraduate</li>
-            <li>Graduate</li>
-            <li>Staff</li>
-            <li>Faculty</li>
-            <li>Community member</li>
-          </ul>
-        <li>Project Description</li>
-        <li>Project Category
-          <ul>
-            <li>Prototype (object is a step towards a final product)</li>
-            <li>Product (object will be used as is, the final product)</li>
-            <li>Presentation (object is used to represent data or
-            information)</li>
-            <li>Preservation (object replicates a real world object)</li>
-          </ul>
-        </li>
-      </ol>
-
-          <p>If you have any questions, send an email to <a
-              href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a></p>
-
-        <h3>3D Printer Rules of Use</h3>
-        <p>You must schedule a printer and your print must be approved in
-        advance of printing. By making a reservation, you agree to the
-            following:</p>
-            <ol>
-                <li>Items that may not be printed include but are not limited
-                to: models which are defective or unsuited for FDM printing,
-                models of weapons and their accessories, copyrighted materials,
-                or items designed for mass production and/or commercial use.
-                Staff technologists reserve the right to cancel or refuse a
-                print at any time.</li>
-
-                <li>Unscheduled printers can be reserved by walk-ins on a
-                first-come first-served basis.</li>
-
-                <li>If you do not arrive within 15 minutes of the start of your
-                of reservation, you may lose your print time.</li>
-
-                <li>You must regularly monitor your print, and be available to
-                remove it before the Makerspace closes.  Prints cannot run
-                outside of staffed hours.</li>
-
-                <li>Makerspace printers are intended for educational and
-                experimentation purposes. Priority will be given to the UVA
-                community users. Printing is currently free, but the staff
-                reserves the right to ask users to supply their own filament
-                for ongoing or large jobs.</li>
-            </ol>
-
-        <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
-    </div>
+  </div>
 
   <div class="makerspace__inventory">
     <div class="maker-inventory__title">What&#8217;s in the Makerspace?</div>
     <!-- insert subtitle saying that this is a rundown of the inventory. Note here about where the software is located (i.e., on fancy computers located in the Makerspace - anyone is welcome to come use.) -->
     <div class="maker-inventory__list">
-      <!-- 3D Printing -->
-      <ul class="maker-list__3d">
-        <span>3D Printing</span>
-        <li>FDM 3D Printers: MakerBot Replicator 2, Ultimaker 2, Lulzbot TAZ 5, Prusa i3 MK3S</li>
-        <li>SLA 3D Printer: Formlabs Form 2 (available for use with staff assistance only)</li>
-        <li>Assortment of FDM 3D printer filaments</li>
-      </ul>
-      <!-- VR/AR/3D -->
-      <ul class="maker-list__vr-ar">
-        <span>VR, AR</span>
-        <li>Oculus Rift DK1 Development KitsMicrosoft</li>
-        <li>HoloLens</li>
-        <li>Google Cardboard classroom set</li>
-      </ul>
       <!-- Physical Computing -->
       <ul class="maker-list__physical">
-        <span>Physical Computing</span>
+        <span>Physical Computing and Electronics</span>
         <li>Sparkfun Arduino kits, with Arduino UNO and 101 boards and an assortment of Arduino shields.</li>
-        <li>Raspberry Pi version 3 and Zero W</li>
+        <li>Raspberry Pi version 3, 4 and Zero W</li>
+        <li>Soldering irons, solder, helping hands</li>
+        <li>Digital multimeters</li>
+        <li>Spare parts for basic electronics tinkering (breadboards, wire, switches, sensors)</li>
+      </ul>
+      <!-- Crafting - Tools for creating and making -->
+      <ul class="maker-list__wearables">
+        <span>Crafting</span>
+        <li>Button Maker</li>
+        <li>Silhouette Curio vinyl cutter</li>
+        <li>Laminator</li>
       </ul>
       <!-- Textiles, Wearables - Learn how to take fashion into the future. -->
       <ul class="maker-list__wearables">
@@ -218,68 +146,30 @@ order: 3
       </ul>
       <!-- Visual Technologies - For the visually inclined. -->
       <ul class="maker-list__visual">
-        <span>Graphics & Photography</span>
+        <span>Graphics</span>
         <li>Wacom Cintiq 22HD graphics tablet</li>
-        <li>Camera equipment:</li>
-        <li>Canon EOS 6D DSLR camera with 24mm f/2.8 and 35mm f/2.0 lenses</li>
-        <li>Samsung NX1000 MILC camera with kit lens</li>
+        <li>Adobe Creative Suite</li>
       </ul>
       <!-- Software Suites: -->
       <ul class="maker-list__software">
         <span>Software</span>
-        <!-- insert this as an aside somewhere: -->
-        <!--span>High-end Mac and PC with maker software installed</span-->
-        <li>Adobe Creative Suite</li>
         <li>Agisoft PhotoScan</li>
         <li>ArcGIS, qGIS</li>
         <li>Arduino</li>
-        <li>Blender, MeshMixer, Tinkercad, SketchUp, Maya</li>
-        <li>Cura, Makerbot Desktop</li>
-        <li>Oculus</li>
-        <li>PreForm</li>
+        <li>Fusion 360, MeshMixer, Tinkercad, SketchUp, Maya</li>
         <li>Rhinocerous</li>
-        <li>Simplify3D</li>
       </ul>
       <!-- Miscellaneous -->
       <ul class="maker-list__misc">
         <span>Miscellaneous</span>
         <li>Tool box with basic hand tools (wrenches, screwdrivers. etc.)</li>
-        <li>Soldering irons, solder, helping hands</li>
-        <li>Digital multimeters</li>
-        <li>Spare parts for basic electronics tinkering (breadboards, wire, switches, sensors)</li>
       </ul>
     </div>
     <div class="maker-inventory__rules">
       <p>All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don’t see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">http://makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
     </div>
-    <div class="maker-inventory__contact">
-      <p>If you have any questions or to want to schedule a printer or a consultation, please contact <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>. To see our open hours and printer reservations, scroll up to view the Makerspace calendar.</p>
-    </div>
   </div>
 
-  <div class="makerspace__public-spaces">
-    <div class="maker-public__title">What’s in the Scholars’ Lab public space?</div>
-    <div class="maker-public__list">
-      <ul>
-        <li>High-end desktop computers (PC and Mac)<ul>
-          <li>List of available software: <a href="http://guides.lib.virginia.edu/LibSoftware">http://guides.lib.virginia.edu/LibSoftware</a>, plus:</li>
-          <li>Abbyy FineReader</li>
-          <li>Adobe Creative Cloud</li>
-        </ul></li>
-        <li>Scanners (flatbed, large format, sheet feeder) and OCR software</li>
-        <li>Media:Scape Conference &amp; Presentation Lounge (contact <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to reserve the presentation space)</li>
-        <li>Egg Chair</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="makerspace__diagram">
-    <!-- commission diagram from Beth -->
-    <!--div>Diagram!!!</div-->
-    <div class="maker-diagram__img"><img src="../assets/img/svg/alderman-floorplan.svg" alt="Makerspace dummy floorplan">
-    {% include makerspace-floorplan.html %}</div>
-    <p id="makerspace-location-label">Makerspace and Public Space, 4th Floor main library (formerly known as Alderman)</p>
-  </div>
 
   <div class="makerspace__questions">
     <div class="maker-questions__text">Questions? Hesitant about joining us in the Makerspace? You belong here, and we're happy to meet with you, answer questions, and give you a tour to help you feel more at home. Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</div>
