--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -72,7 +72,7 @@ order: 6
 			<ul class="spatial-starting__gis">
 				<h3>GIS staff availability</h3>
 				<li>Staff: Chris Gist and Drew MacQueen</li>
-				<li>Office: 417 main library (formerly known as Alderman)</li>
+				<li>Office: Clemons 3rd Floor (DML wing)</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics staff availability</h3>
 				<li>Staff: Will Rourk and Arin Bennett</li>
@@ -190,7 +190,7 @@ order: 6
 		<ul class="spatial-people__list">
 			<!-- use Liquid here: -->
 			{% for person in site.people %}
-			{% if person.title == 'Will Rourk' or person.title == 'Arin Bennett' or person.title == 'Chris Gist' or person.title == 'Drew MacQueen' or person.title == 'Cho Jiang' %}
+			{% if person.title == 'Will Rourk' or person.title == 'Arin Bennett' or person.title == 'Chris Gist' or person.title == 'Drew MacQueen' %}
 			<li class="spatial-people__person">
 				<div class="spatial-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.title }}"></div>
 				<div class="spatial-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.title }}</a></div> <!-- link to their page -->
