COVID contact info update

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -66,6 +66,18 @@ order: 6
 		<div class="spatial-starting__how">
 			<!-- NB: merge these when add content -->
 			<ul class="spatial-starting__chi">
+				<h3>Find us</h3>
+				<li>We are working remotely during Fall 2020, but we will be in Clemons until the completion of the renovation of our main library, scheduled for 2023. You can use the email addresses below to reach particular staff, or contact <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> if you're not sure who you need to talk to.</li>
+				<h3>Email</h3>
+				<li>Email the whole team of Spatial Tech experts at <a href="mailto:spatial@virginia.edu">spatial@virginia.edu</a></li>
+				<li>Email GIS experts Chris Gist and Drew MacQueen at <a href="mailto:slabgis@virginia.edu@virginia.edu">slabgis@virginia.edu@virginia.edu</a></li>
+				<li>Email 3D cultural heritage data and content expert Will Rourk at <a href="mailto:wmr5a@virginia.edu">wmr5a@virginia.edu</a></li>
+				<li>Email virtual and augmented reality expert Arin Bennett at <a href="mailto:abb3n@virginia.edu">abb3n@virginia.edu</a></li>
+			</ul>
+		<!--	<div class="spatial__starting">
+		<div class="spatial-starting__title">Get in touch</div>
+		<div class="spatial-starting__how">
+			<ul class="spatial-starting__chi">
 				<h3>Email</h3>
 				<li><a href="mailto:spatial@virginia.edu">Email the Spatial Tech experts</a> at spatial@virginia.edu</li>
 			</ul>
@@ -79,6 +91,8 @@ order: 6
 				<li>Hours: by appointment</li>
 				<li>Office: Clemons 3rd Floor (DML wing)</li>
 			</ul>
+		</div>
+	</div> -->
 		</div>
 	</div>
 
