Update with all the work we did

--- a/pages/hours-and-spaces.html
+++ b/pages/hours-and-spaces.html
@@ -2,7 +2,7 @@
 layout: page
 title: Hours and Spaces
 permalink: /hours-and-spaces/
-nav: true
+nav: false
 ---
 <div class="home-find__title"><a href="/hours-and-spaces">Find us</a></div>
 			<div class="home-find__content">
