--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -57,7 +57,7 @@ order: 6
 		<div class="spatial-mission__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="spatial-mission__text">
-			<p>We provide training, consultations, and collaboration on the latest software, equipment, and methods, including GIS, 3D modeling, laser scanning, aerial drones, photogrammetry, our own <a href="http://neatline.org">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
+			<p>We provide training, consultations, and collaboration on the latest software, equipment, and methods, including GIS, 3D modeling, laser scanning, aerial drones, photogrammetry, virtual and augmented reality, and more.</p>
 		</div>
 	</div>
 
@@ -72,7 +72,7 @@ order: 6
 			<ul class="spatial-starting__gis">
 				<h3>GIS staff availability</h3>
 				<li>Staff: Chris Gist and Drew MacQueen</li>
-				<li>Office: 417 main library (formerly known as Alderman)</li>
+				<li>Office: Clemons 3rd Floor (DML wing)</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics staff availability</h3>
 				<li>Staff: Will Rourk and Arin Bennett</li>
@@ -90,7 +90,7 @@ order: 6
 			<li>See our <a href="https://guides.lib.virginia.edu/gis">GIS Research Page</a> for all things GIS: download software, find spatial data, attend a workshop, or schedule a consultation with our staff specialists.</li>
 			<li>Our GIS resources include the <a href="http://gis.lib.virginia.edu">UVA Library Geoportal</a> and the <a href="https://geoportal.lib.virginia.edu/UVAImageDiscovery/">UVA Image Discovery Tool</a>.</li>
 			<h3>GIS workshop series</h3>
-			<li>We offer a series of friendly, jargon-free workshops each fall and spring. You can read more about our <a href="https://scholarslab.org/blog/gis-workshops-spring-2019/">Spring 2019 workshops here</a>.</li>
+			<li>We offer a series of friendly, jargon-free workshops each fall and spring. You can read more about upcoming and past workshops on our <a href="https://scholarslab.lib.virginia.edu/events/">events page</a>.</li>
 			</ul>
 		</ul>
 		<div class="spatial-faq__title">Cultural Heritage Informatics</div>
